--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <form action="" method="post">
                 <label for="name">Name</label> <br>
-                <input type="text" name="name" id="" placeholder="Enter your name" required class="text-field"> <br> <br>
+                <input type="text" name="Name" id="" placeholder="Enter your name" required class="text-field"> <br> <br>
 
                 <label for="Email">Email</label> <br>
                 <input type="email" name="Email" id=""  placeholder="Enter your Email" required class="text-field"> <br> <br>
@@ -32,9 +32,9 @@
                 </select> <br> <br>
 
                 <label for="myradio">Would you recommend CapacityBay to a friend?</label> <br>
-                <input type="radio" name="myradio" id="" required> Definitely <br>
-                <input type="radio" name="myradio" id="" required> Maybe <br>
-                <input type="radio" name="myradio" id="" required> Not sure <br> <br>
+                <input type="radio" name="myradio" value="Definitely" id="" required> Definitely <br>
+                <input type="radio" name="myradio" value="Maybe" id="" required> Maybe <br>
+                <input type="radio" name="myradio" value="Notsure" id="" required> Not sure <br> <br>
 
                 <label for="features">What is your favourite feature of CapacityBay?</label> <br>
                 <select name="features" id="" class="text-field" required>
@@ -46,16 +46,16 @@
                 </select> <br> <br>
 
                 <label for="check">What would you lke to see improved? <span>(check all that apply)</span></label> <br>
-                <input type="checkbox" name="check" class="mycheck"> Front-end Projects <br>
-                <input type="checkbox" name="check" class="mycheck"> Back-end Projects <br>
-                <input type="checkbox" name="check" class="mycheck"> Data Visualization <br>
-                <input type="checkbox" name="check" class="mycheck"> Challenges <br>
-                <input type="checkbox" name="check" class="mycheck"> Open Source Community <br>
-                <input type="checkbox" name="check" class="mycheck"> Gitters help rooms <br>
-                <input type="checkbox" name="check" class="mycheck"> Videos <br>
-                <input type="checkbox" name="check" class="mycheck"> City Meetups <br>
-                <input type="checkbox" name="check" class="mycheck"> Forum <br>
-                <input type="checkbox" name="check" class="mycheck"> Additional Courses <br> <br>
+                <input type="checkbox" name="check" value="Front-end Projects" class="mycheck"> Front-end Projects <br>
+                <input type="checkbox" name="check" value="Back-end Projects" class="mycheck"> Back-end Projects <br>
+                <input type="checkbox" name="check" value="Data Visualization" class="mycheck"> Data Visualization <br>
+                <input type="checkbox" name="check" value="Challenges" class="mycheck"> Challenges <br>
+                <input type="checkbox" name="check" value="Open Source Community" class="mycheck"> Open Source Community <br>
+                <input type="checkbox" name="check" value="Gitters help rooms" class="mycheck"> Gitters help rooms <br>
+                <input type="checkbox" name="check" value="Videos" class="mycheck"> Videos <br>
+                <input type="checkbox" name="check" value="City Meetups" class="mycheck"> City Meetups <br>
+                <input type="checkbox" name="check" value="Forum" class="mycheck"> Forum <br>
+                <input type="checkbox" name="check" value="Additional Courses" class="mycheck"> Additional Courses <br> <br>
 
                 <label for="message">Any comments or suggestions?</label> <br>
                 <textarea name="message" id="" required placeholder="Enter your comment here....." class="text-field msg"></textarea> <br> <br>
